# sob-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: security-reviewer.md  test-writer.md
.claude/commands/: cleanup.md  debug.md  deploy.md  docs.md  doku.md  help.md  sprint.md  status.md  tasks.md
.claude/hooks/: init.sh
.claude/skills/deploy/: SKILL.md
docs/: SPRINT_GUIDE.md
examples/: basic_usage.py  langchain_rag.py  llamaindex_rag.py
src/sob/: __init__.py  _constants.py  client.py  exceptions.py  models.py
src/sob/integrations/: __init__.py  langchain.py  llamaindex.py
tests/: conftest.py  test_client.py  test_client_async.py  test_exceptions.py  test_langchain.py  test_llamaindex.py  test_models.py
